--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div class="tagline">Aether & Co.</div>
         <div class="subtext">Quiet Signal. Loud Impact.</div>
         <a href="mailto:Aethersquietpower@gmail.com" class="contact">Get in Touch</a>
+        <a href="mission.html" class="nav-link">Our Mission</a>
     </div>
 </body>
 </html>
