--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div class="subtext">Quiet Signal. Loud Impact.</div>
         <a href="mailto:Aethersquietpower@gmail.com" class="contact">Get in Touch</a>
         <a href="mission.html" class="nav-link">Our Mission</a>
+        <a href="signal.html" class="nav-link">Send a Signal</a>
     </div>
 </body>
 </html>
